--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,7 @@
   "css.validate": false,
   "scss.validate": false,
   "less.validate": false,
-  "postcss.validate": false
+  "postcss.validate": false,
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
