--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "framer-motion": "^12.9.4",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "motion": "^12.23.24",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "react": "^19",
