--- a/package.json
+++ b/package.json
@@ -45,10 +45,12 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.9.4",
+    "gray-matter": "^4.0.3",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "motion": "^12.23.24",
     "next": "15.2.4",
+    "next-mdx-remote": "^6.0.0",
     "next-themes": "^0.4.4",
     "react": "^19",
     "react-day-picker": "8.10.1",
